[package]
name = "yuanbao-chat2api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
axum = "0.8.3"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
